[tool.poetry]
name = "repl_nix_jobScheduler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
numpy = "^1.25.1"
google-auth-oauthlib = "^1.0.0"
requests = "^2.31.0"
xds-protos = "^0.0.11"
Authlib = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
